# img-resize-tg-bot

./: .gitignore  Cargo.toml  Procfile  README.md
src/: commands.rs  env.rs  main.rs  resize_image_handler.rs  webhook.rs
src/dialogue/: mod.rs
src/dialogue/states/: main.rs  mod.rs  receive_image_tg_sticker.rs  resize_image_tg_sticker.rs
