[package]
name = "img-resize-tg-bot"
version = "0.1.0"
authors = ["Tim Aliberdov <timur.aliberdov@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
teloxide = "0.3.1"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }
warp = "0.2.5"
serde_json = "1.0.57"
reqwest = "0.10.8"
image = "0.23.8"
tempfile = "3.1.0"
