[package]
name = "img-resize-tg-bot"
version = "0.1.0"
authors = ["Tim Aliberdov <timur.aliberdov@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = { version = "0.11.3", features = ["macros", "webhooks-axum"] }
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.91"
image = "0.24.5"
tempfile = "3.3.0"
